Fixed range switcher and server bug preventing travel search.

--- a/public/components/search-field/travel-search.pug
+++ b/public/components/search-field/travel-search.pug
@@ -11,7 +11,7 @@
     )
     
     input.input-sm.form-control.margin-top(
-        type="text", 
+        type="number", 
         ng-model="travelModel.date.year",
         placeholder="year ({{ counts.travel_year }} entries)",
         ng-class="{ filled : travelModel.date.year }",
@@ -19,7 +19,7 @@
     )
     
     input.input-sm.form-control.margin-top(
-        type="text", 
+        type="number", 
         ng-model="travelModel.date.month",
         placeholder="month ({{ counts.travel_month }} entries)",
         ng-class="{ filled : travelModel.date.month }",
@@ -27,7 +27,7 @@
     )
     
     input.input-sm.form-control.margin-top(
-        type="text", 
+        type="number", 
         ng-model="travelModel.date.startYear",
         placeholder="start year ({{ counts.travel_year }} entries)",
         ng-class="{ filled : travelModel.date.startYear }",
@@ -35,7 +35,7 @@
     )
     
     input.input-sm.form-control.margin-top(
-        type="text", 
+        type="number", 
         ng-model="travelModel.date.startMonth",
         placeholder="start month ({{ counts.travel_month }} entries)",
         ng-class="{ filled : travelModel.date.startMonth }",
@@ -43,7 +43,7 @@
     )
     
     input.input-sm.form-control.margin-top(
-        type="text", 
+        type="number", 
         ng-model="travelModel.date.endYear",
         placeholder="end year ({{ counts.travel_year }} entries)",
         ng-class="{ filled : travelModel.date.endYear }",
@@ -51,7 +51,7 @@
     )
     
     input.input-sm.form-control.margin-top(
-        type="text", 
+        type="number", 
         ng-model="travelModel.date.endMonth",
         placeholder="end month ({{ counts.travel_month }} entries)",
         ng-class="{ filled : travelModel.date.endMonth }",
