--- a/public/app.css
+++ b/public/app.css
@@ -946,3 +946,15 @@ ul.list-group.entry-facet > li .controls {
   font-style: italic;
   color: #888;
 }
+
+.query-type-chooser {
+  margin-top: 1.5em;
+  margin-bottom: .75em;
+}
+
+.specified-by-chooser {
+  margin: 1.5em 0;
+  line-height: 1.75;
+  color: #888;
+  letter-spacing: .025em;s
+}
