--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -317,16 +317,16 @@
                         span(ng-bind-html="highlighted('travel_place', travel)")
                       td.text-right.tnum-lnum
                         span(ng-class="{'highlighted': highlightTravel(travel)}")
-                          span(ng-show="travel.travelStartYear == '0' || travel.estimatedTravelDates") -
-                          span(ng-show="travel.travelStartYear != '0' && !travel.estimatedTravelDates") {{travel.travelStartYear}}
-                          span(ng-show="travel.travelStartMonth != '0' && !travel.estimatedTravelDates") /{{travel.travelStartMonth}}
-                          span(ng-show="travel.travelStartDay != '0' && !travel.estimatedTravelDates") /{{travel.travelStartDay}}
+                          span(ng-show="!travel.travelStartYear") -
+                          span(ng-show="travel.travelStartYear") {{ travel.travelStartYear }}
+                          span(ng-show="travel.travelStartMonth") /{{ travel.travelStartMonth }}
+                          span(ng-show="travel.travelStartDay") /{{ travel.travelStartDay }}
                       td.text-right.tnum-lnum
                         span(ng-class="{'highlighted': highlightTravel(travel)}")
-                          span(ng-show="travel.travelEndYear == '0' ||  travel.estimatedTravelDates") -
-                          span(ng-show="travel.travelEndYear != '0' && !travel.estimatedTravelDates") {{travel.travelEndYear}}
-                          span(ng-show="travel.travelEndMonth != '0' && !travel.estimatedTravelDates") /{{travel.travelEndMonth}}
-                          span(ng-show="travel.travelEndDay != '0' && !travel.estimatedTravelDates") /{{travel.travelEndDay}}
+                          span(ng-show="!travel.travelEndYear") -
+                          span(ng-show="travel.travelEndYear") {{ travel.travelEndYear }}
+                          span(ng-show="travel.travelEndMonth") /{{ travel.travelEndMonth }}
+                          span(ng-show="travel.travelEndDay") /{{ travel.travelEndDay }}
                       td.text-right.tnum-lnum.travel-marker-body(ng-show="travel.markers")
                         span(ng-class="{'highlighted': highlightTravel(travel)}") {{ travel.markers }}
 
