Re-added and fixed querying for an empty month.

--- a/public/components/search-field/travel-search.pug
+++ b/public/components/search-field/travel-search.pug
@@ -27,7 +27,7 @@
     )
         label.pull-right.empty-checkbox(
             ng-class="{ 'empty-checkbox-disabled': unit === 'month' && travelModel.date.specifiedBy === 'year' }",
-            ng-show="unit === 'year'",
+            ng-show="unit === travelModel.date.specifiedBy",
         )
             span empty
             input(
