Wrote skeleton for visualization update code.

--- a/public/index.pug
+++ b/public/index.pug
@@ -29,7 +29,7 @@ html(lang="en", ng-app="app")
             li
               a(ui-sref="explore") Explore 
             li
-              a(ui-sref="visualizations") Visualizations 
+              a(ui-sref="view") View 
                 sup (beta)
             li
               a(ui-sref="lists") Saved Lists 
@@ -84,7 +84,7 @@ html(lang="en", ng-app="app")
     script(type='text/javascript', src='/entry/entry-minimap.js')
     script(type='text/javascript', src='/edit-entry/edit-entry.js')
     script(type='text/javascript', src='/lists/lists.js')
-    script(type='text/javascript', src='/visualizations/visualizations.js')
+    script(type='text/javascript', src='/view/view.js')
     script(type='text/javascript', src='/lists/list-service.js')
 
     script(type='text/javascript', src='/components/facet/facet.js')
@@ -97,4 +97,5 @@ html(lang="en", ng-app="app")
     script(type='text/javascript', src='/components/search-field/travel-search.js')
     script(type='text/javascript', src='/components/search-field/free-search.js')
     script(type='text/javascript', src='/components/pills/pills.js')
+    script(type='text/javascript', src='/components/visualizations/visualizations.js')
 
