--- a/public/view/view.pug
+++ b/public/view/view.pug
@@ -13,7 +13,7 @@
     .row
         br
         .col-lg-12
-            visualizations(dimensions="[ 'gender', 'entryLength' ]")
+            visualizations(dimensions="[ 'gender', 'entryLength', 'travelLength', 'dateOfFirstTravel' ]")
 
     .row(ng-show="entryListVisible")
         br
