--- a/public/app.css
+++ b/public/app.css
@@ -997,10 +997,11 @@ ul.list-group.entry-facet > li .controls {
   padding: 0;
   display: flex;
   align-items: stretch;
+  height: 600px;
 }
 
 .visualizations .panel-body .canvas {
-  height: 600px;
+  height: 100%;
 }
 
 .visualizations .panel-body .sidebar {
@@ -1013,6 +1014,8 @@ ul.list-group.entry-facet > li .controls {
 
 .visualizations .panel-body .sidebar .dimension-keys {
   padding: 1em;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .visualizations .panel-body .sidebar .dimension-keys .dimension-key {
