--- a/public/components/visualizations/visualizations.pug
+++ b/public/components/visualizations/visualizations.pug
@@ -14,6 +14,8 @@
     
     .panel-body
         .col-lg-9.canvas
+            svg(width="100%", height="100%")
+        
         .col-lg-3.sidebar
             .dimension-keys
                 div(ng-repeat="category in viewModel.dimensionCategories")
